--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,10 @@
   "scripts": {
     "typeorm": "npm run build && npx typeorm migration:run",
     "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/main",
+    "start": "node dist/main.js",
+    "start:prod": "node dist/main.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
-    "start:prod": "node dist/main",
+    
     "start:local": "cp .env.development .env && ts-node-dev --respawn --transpile-only src/main.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
