--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,7 @@ services:
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-news_app_user}"]  # ← исправлено
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 10s
+ 
 
   backend:
     build: 
@@ -45,8 +40,7 @@ services:
     ports:
       - "3000:3000"  # Доступен снаружи
     depends_on:
-      postgres:
-        condition: service_healthy
+      - postgres
     restart: unless-stopped
     volumes:
       - ./backend/uploads:/app/uploads
